支持中央监控器组目标变更动作